Added Task form and Tasklist display

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,103 @@
+
+
 .App {
-  text-align: center;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 100vw;
+    height: 100vh;
+    font-family:Arial, Helvetica, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header {
+    flex: 40%;
+    /* background: linear-gradient(#520F22, #FF0049); */
+    background-color: #271858;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.header input {
+    height: 5vh;
+    width: 20vw;
+    border: none;
+    border-radius: 8px;
+    padding-left: 10px;
+    font-size: 17px;
+    border: 1px solid grey;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .header button {
+    height: 5vh;
+    width: 10vw;
+    border-radius: 8px;
+    padding: 1%;
+    cursor: pointer;
   }
-  to {
-    transform: rotate(360deg);
-  }
+
+.header .inputContainer {
+    display: flex;
+    flex-direction: column;
 }
+
+.inputAlign > input {
+    margin: 2%;
+    box-shadow: 2%;
+}
+
+.inputAlign {
+    display: flex;
+    flex-direction: column;
+}
+
+
+.todoList {
+    flex: 70%;
+    margin: 1%;
+    display: flex;
+    align-items: center;
+    padding: 5%;
+    background-color: white;
+    flex-direction: column;
+  }
+
+  .task {
+    width: 500px;
+    height: 50px;
+    display: flex;
+    color: white;
+    margin: 15px;
+  }
+  
+  .task .content {
+    flex: 80%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .task .content span {
+    display: grid;
+    place-items: center;
+    border: 1px solid white;
+    width: 100%;
+    height: 100%;
+    font-size: 18px;
+    border-right: none;
+    background-color: #271858;
+  }
+  
+  .task button {
+    flex: 15%;
+    height: 100%;
+    border: 0.1rem solid #271858;
+    background-color: #8260F0;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+    color: white;
+    cursor: pointer;
+  }
